proyectoGPS/k8s/nginx-app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-app-deployment
  namespace: proyecto1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: mynginx
        image: nginx:1.13.8
        ports:
        - name: http-port
          containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
