proyectoGPS/k8s/proyectogps-webapp.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: proyectogps-webapp-deployment
  namespace: proyecto1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: proyectogps-webapp
    spec:
      containers:
      - name: api-nginx
        image: nginx:1.13.8
        ports:
        - name: http-port
          containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-volume
        configMap:
          name: webapp-nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
