proyectoGPS/k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-p1
  namespace: proyecto1
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx-app
  type: NodePort
