proyectoGPS/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lbnginx-ingress-p1
  namespace: proyecto1
spec:
  rules:
    - host: proyecto1.dis.eafit.edu.co
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service-p1
              servicePort: 80
